# DrowningInFuzz

./: .gitignore  CMakeLists.txt  README.md  analyze.py  dsp_replica.py  match.py  plot_analysis.py  verify_curve.py  wav_inspect.py
.claude/: settings.local.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
SourceVox/: VocalDistortionEditor.cpp  VocalDistortionEditor.h  VocalDistortionProcessor.cpp  VocalDistortionProcessor.h
scripts/: build.ps1
